--- a/index.html
+++ b/index.html
@@ -14,37 +14,48 @@
         <h1 class="title">Trivia Game</h1>
         <hr>
 
+        <div class="container" id="timer"></div>
+
         <div class="container" id="question1">
+            <p id="q1"></p>
             <div class="container">
-                <button class="button is-primary is-inverted is-outlined" id="question1a">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question1b">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question1c">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question1d">Invert Outlined</button>
+                <button class="button is-primary is-inverted is-outlined" id="question1a"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question1b"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question1c"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question1d"></button>
             </div>
         </div>
         <div class="container" id="question2">
+            <p id="q2"></p>
             <div class="container">
-                <button class="button is-primary is-inverted is-outlined" id="question2a">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question2b">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question2c">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question2d">Invert Outlined</button>
+                <button class="button is-primary is-inverted is-outlined" id="question2a"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question2b"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question2c"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question2d"></button>
             </div>
         </div>
         <div class="container" id="question3">
+            <p id="q3"></p>
             <div class="container">
-                <button class="button is-primary is-inverted is-outlined" id="question3a">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question3b">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question3c">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question3d">Invert Outlined</button>
+                <button class="button is-primary is-inverted is-outlined" id="question3a"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question3b"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question3c"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question3d"></button>
             </div>
         </div>
         <div class="container" id="question4">
+            <p id="q4"></p>
             <div class="container">
-                <button class="button is-primary is-inverted is-outlined" id="question4a">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question4b">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question4c">Invert Outlined</button>
-                <button class="button is-primary is-inverted is-outlined" id="question4d">Invert Outlined</button>
+                <button class="button is-primary is-inverted is-outlined" id="question4a"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question4b"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question4c"></button>
+                <button class="button is-primary is-inverted is-outlined" id="question4d"></button>
             </div>
+        </div>
+
+        <div class="container" id="answers">
+            <a class="button is-light" id="enterAnswers">Submit</a><br>
+            <a class="button is-dark" id="resetButton">Reset</a>
         </div>
     </div>
 
