contents doesn't seem to center

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="title">Trivia Game</h1>
         <hr>
 
-        <div class="container" id="timer"></div>
+        <h3 class="container" id="timer"></h3>
 
         <div class="container" id="question1">
             <p id="q1"></p>
